# coral-python

./: .gitignore  CLAUDE.md  README.md  coral-py  definitions.py  executor.py  functions.py  main.py  network-from-fe-classes.json  network-from-fe-obstacle.json  network-from-fe-smoke_plume.json  network-from-fe.json  network-py-mwe.json  pyproject.toml  pytest.ini  registry-py-mwe.json  registry-py.json  registry.py  requirements.in  requirements.txt  workflow.json  workflow_executer.py  workflow_mwe.json
definitions/: README.md  __init__.py  math_ops.py  phiflow_defs.py  primitives.py  string_ops.py
docs/: ONBOARDING.it.md  ONBOARDING.md
issues/16-plugin-modularization/: RECONSTRUCTION.md  plan.md
phi_flow/: README.md  multiple_obstacles.py  multiple_obstacles_absorb.py  one_obstacle.py  one_obstacle_absorb.py  parallel-simulation-script.py  parallel-simulation-torch.py  pde_tutorial.py  tutorial_2.py
phi_flow/examples/parallel_simulations/: parallel-simulation.py
phi_flow/examples/smoke_plume/: smoke_plume.py
phi_flow/tutorial/: pde_tutorial.py  tutorial_2.py
tests/: README.md  __init__.py  conftest.py  test_acceptance.py  test_characterization.py  test_core_contract.py  test_executor.py  test_golden_registry.py  test_integration.py  test_modules.py  test_plugin_discovery.py  test_registry.py
tests/fixtures/invalid_workflows/: circular_dependency.json  invalid_function.json  missing_node.json
tests/fixtures/valid_nodes/: README.md  registry-math.json  registry-phiflow.json  registry-py.json
tests/fixtures/valid_workflows/: README.md  network-from-fe-classes.json  network-from-fe-functions.json  network-from-fe-math.json  network-from-fe-obstacle.json  network-from-fe-smoke_plume.json  network-from-fe.json
tests/golden/: node_types.string.json
