[project]
name = "coral-python"
version = "0.1.0"
description = "Python cross-validation backend for the DealiiX platform: executes JSON node-graph workflows and emits a node registry."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "phiflow",
    "jax",
    "h5py",
    # Transitional (issue #16, Step 1): the flat root project depends on coral-core so plain
    # `uv sync` installs the new workspace member editable alongside the flat code. Removed in
    # Step 2 when the root becomes a virtual workspace root (which installs all members itself).
    "coral-core",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

# Flat-script layout (main.py / executor.py / registry.py at the repo root, imported by
# module name rather than as an installed package). Treat this as a non-packaged uv project:
# `uv sync` installs the dependencies into .venv but does not try to build coral-python itself.
#
# NOTE (issue #16, Step 1): this flat metadata is transitional. The root is now also the uv
# workspace root (below); the flat code keeps importing here until Step 2 migrates it into the
# `coral-app` package, at which point this `[project]`/`[tool.uv]` block is removed and the root
# becomes a pure virtual workspace root.
[tool.uv]
package = false

# uv workspace: the packages under packages/* are developed together and installed editable +
# cross-linked by `uv sync`. `[tool.uv.sources]` tells uv to resolve internal package names from
# the workspace checkout rather than a package index. Members/sources grow as packages land
# (Step 2 adds coral-app + the plugins).
[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
coral-core = { workspace = true }
