# Virtual uv workspace root (issue #16). There is intentionally no `[project]` table here: the
# repo is a monorepo of independently installable distributions under packages/*, and this file
# only wires them together for development. A virtual root means `uv sync` installs every member
# editable and cross-linked. This file is dev/uv-only — pip never reads it and it is never baked
# into any wheel.

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.uv.workspace]
members = ["packages/*"]

# Resolve these internal package names from the workspace checkout rather than a package index.
# Dev/uv-only: NOT baked into wheels, so the pip end-user path (--find-links dist) is unaffected.
[tool.uv.sources]
coral-core = { workspace = true }
coral-app = { workspace = true }
coral-plugin-math = { workspace = true }
coral-plugin-string = { workspace = true }
coral-plugin-phiflow = { workspace = true }
